feat: Reorganizar estrutura de arquivos e implementar novo sistema de cadastro e gerenciamento de medicamentos no estoque

--- a/pages/farmacia/public/nav-farmacia.html
+++ b/pages/farmacia/public/nav-farmacia.html
@@ -17,17 +17,20 @@
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item">
-            <a class="nav-link" href="/pages/farmacia/private/cadastroremedios.html">Cadastro Mediacamentos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/pages/farmacia/private/financeiro.html">Financeiro</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/pages/farmacia/private/higienizacao.html">Higinizacao</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/pages/farmacia/private/minhafarmacia.html">Minha Farmacia</a>
-          </li>
+          <a class="nav-link" href="/pages/farmacia/private/estoque/cadastroremedios.html">Cadastro Mediacamentos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/farmacia/private/estoque/estoque.html">Estoque</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/farmacia/private/financeiro.html">Financeiro</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/farmacia/private/higienizacao.html">Higinizacao</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/farmacia/private/minhafarmacia.html">Minha Farmacia</a>
+        </li>
       </ul>
     </div>
     <div class="d-flex align-items-center">
