--- a/pages/farmacia/public/footer-farmacia.html
+++ b/pages/farmacia/public/footer-farmacia.html
@@ -25,7 +25,10 @@
         <h5 class="fw-bold mb-3">Acesso Rápido</h5>
         <ul class="list-unstyled small">
           <li class="nav-item">
-            <a class="nav-link" href="/pages/farmacia/private/cadastroremedios.html">Cadastro Mediacamentos</a>
+            <a class="nav-link" href="/pages/farmacia/private/estoque/cadastroremedios.html">Cadastro Mediacamentos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/farmacia/private/estoque/estoque.html">Estoque</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/pages/farmacia/private/financeiro.html">Financeiro</a>
